fix(config): remove border-radius on scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,5 +83,4 @@ html::-webkit-scrollbar {
 
 html::-webkit-scrollbar-thumb {
 	background: #ec4899;
-	border-radius: 8px;
 }
